--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@
           <li class="active"><a href="#home">Nyumbani</a></li>
           <li><a href="#about-partners">Kuhusu Sisi</a></li>
           <li><a href="#services">Huduma zetu</a></li>
-          <li><a href="assets/site/wadau.html">Wadau</a></li>
-          <li><a href="#team">Timu</a></li>
+          <li><a href="#assets/site/wadau.html">Wadau</a></li>
+          <!-- <li><a href="/index.html#team">Timu</a></li> -->
           <li><a href="#contact">Wasiliana nasi</a></li>
-          <!--<li class="get-started"><a href="#services">Anza Kutumia Huduma zetu Sasa</a></li>-->
         </ul>
       </nav>
       <!-- .nav-menu -->
@@ -170,7 +169,7 @@
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                   <i class="bx bx-images" id="images"></i>
-                  <h4><a href="#">Kazi na Bidii zetu</a></h4>
+                  <h4><a href="#kazi">Kazi na Bidii zetu</a></h4>
                   <p>Picha za maktaba</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
@@ -221,12 +220,12 @@
                 <img src="assets/img/digital.jpeg" alt="...">
               </div>
               <div class="card-body">
-                <h5 class="card-title"><a href="">e-FORUM</a></h5>
+                <h5 class="card-title"><a href="#e-forum">e-FORUM</a></h5>
                 <p class="card-text">
                   Huduma hii ina Jukwaa huru kwa ajili ya wakulima, Wadau na wanachi wengine wanaopenda kuchangia katika
                   mijadala inayohusu kilimo kilimo.
                 </p>
-                <div class="read-more"><a href="#"><i class="icofont-arrow-right"></i> Soma Zaidi</a></div>
+                <div class="read-more"><a href="##e-forum"><i class="icofont-arrow-right"></i> Soma Zaidi</a></div>
               </div>
             </div>
 
@@ -237,184 +236,6 @@
     </section><!-- End Services Section -->
 
 
-    <!-- ======= Team Section ======= -->
-    <section id="team" class="team section-bg">
-      <div class="container">
-
-        <div class="section-title">
-          <h2 data-aos="fade-in">Timu</h2>
-          <p data-aos="fade-in">
-            Timu yetu inahusisha wataalamu wa kada mbali mbali kutoka katika sekta za Kilimo,Tehama,Uongozi na Maendeleo
-            ya Jamii.
-            Timu hii imejipanga kuleta mazingira mazuri ya upatikanaji wa taarifa za kilimo kwenye maeneo muhimu kama
-            Mbegu,Mbolea n.k
-          </p>
-        </div>
-
-        <div class="row">
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="member" data-aos="fade-up">
-              <div class="pic"><img src="assets/img/team/avatar.png" alt=""></div>
-              <h4>Dismas Mertus Mguba</h4>
-              <span>Principal Bigwa FDC</span>
-              <div class="social">
-                <a href="tel:+255743312745"><i class="icofont-phone"></i></a>
-                <a href="" target="_blank"><i class="icofont-facebook"></i></a>
-                <a href=""><i class="icofont-email"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/avatar-21.png" alt=""></div>
-              <h4>Alphonce Fidelis Stephano</h4>
-              <span>Project Coordinator</span>
-              <div class="social">
-                <a href="tel:+255629498584"><i class="icofont-phone"></i></a>
-                <a href="" target="_blank"><i class="icofont-facebook"></i></a>
-                <a href=""><i class="icofont-email"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <div class="pic"><img src="assets/img/team/avatar-25.png" alt=""></div>
-              <h4>Theresia Nerei Shayo</h4>
-              <span>Agriculture Tutor</span>
-              <div class="social">
-                <a href="tel:+255743312745"><i class="icofont-phone"></i></a>
-                <a href="" target="_blank"><i class="icofont-facebook"></i></a>
-                <a href=""><i class="icofont-email"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-xl-3 col-lg-12 col-md-6">
-            <div class="member" data-aos="fade-up" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/avatar-29.png" alt=""></div>
-              <h4>Ally Tinge Gwaje</h4>
-              <span>Accountant</span>
-              <div class="social">
-                <a href="tel:+255629498584"><i class="icofont-phone"></i></a>
-                <a href="" target="_blank"><i class="icofont-facebook"></i></a>
-                <a href=""><i class="icofont-email"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="member" data-aos="fade-up">
-              <div class="pic"><img src="assets/img/team/avatar-10.png" alt=""></div>
-              <h4>Moses Octavian Shoo</h4>
-              <span>Supplies Officer</span>
-              <div class="social">
-                <a href="tel:+255743312745"><i class="icofont-phone"></i></a>
-                <a href="" target="_blank"><i class="icofont-facebook"></i></a>
-                <a href=""><i class="icofont-email"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/avatar-20.png" alt=""></div>
-              <h4>Monica Elias Mtundu</h4>
-              <span>Project Coordinator Bigwa FDC</span>
-              <div class="social">
-                <a href="tel:+255629498584"><i class="icofont-phone"></i></a>
-                <a href="" target="_blank"><i class="icofont-facebook"></i></a>
-                <a href=""><i class="icofont-email"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <div class="pic"><img src="assets/img/team/avatar-32.png" alt=""></div>
-              <h4>Sharify Muhibu Abdala</h4>
-              <span>Community Development Officer</span>
-              <div class="social">
-                <a href="tel:+255743312745"><i class="icofont-phone"></i></a>
-                <a href="" target="_blank"><i class="icofont-facebook"></i></a>
-                <a href=""><i class="icofont-email"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-xl-3 col-lg-12 col-md-6">
-            <div class="member" data-aos="fade-up" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/avatar-33.png" alt=""></div>
-              <h4>Mkiwa Yusuph Mrisho</h4>
-              <span>Nutrition Officer</span>
-              <div class="social">
-                <a href="tel:+255629498584"><i class="icofont-phone"></i></a>
-                <a href="" target="_blank"><i class="icofont-facebook"></i></a>
-                <a href=""><i class="icofont-email"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="member" data-aos="fade-up">
-              <div class="pic"><img src="assets/img/team/avatar-13.png" alt=""></div>
-              <h4>Pascal Herman Sweya</h4>
-              <span>Training Coordinator Bigwa FDC</span>
-              <div class="social">
-                <a href="tel:+255743312745"><i class="icofont-phone"></i></a>
-                <a href="" target="_blank"><i class="icofont-facebook"></i></a>
-                <a href=""><i class="icofont-email"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/avatar-11.png" alt=""></div>
-              <h4>Sarah Jhinson</h4>
-              <span>Product Manager</span>
-              <div class="social">
-                <a href="tel:+255629498584"><i class="icofont-phone"></i></a>
-                <a href="" target="_blank"><i class="icofont-facebook"></i></a>
-                <a href=""><i class="icofont-email"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <div class="pic"><img src="assets/img/team/avatar-39.png" alt=""></div>
-              <h4>William Anderson</h4>
-              <span>CTO</span>
-              <div class="social">
-                <a href="tel:+255743312745"><i class="icofont-phone"></i></a>
-                <a href="" target="_blank"><i class="icofont-facebook"></i></a>
-                <a href=""><i class="icofont-email"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-xl-3 col-lg-12 col-md-6">
-            <div class="member" data-aos="fade-up" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/avatar-26.png" alt=""></div>
-              <h4>Amanda Jepson</h4>
-              <span>Accountant</span>
-              <div class="social">
-                <a href="tel:+255629498584"><i class="icofont-phone"></i></a>
-                <a href="" target="_blank"><i class="icofont-facebook"></i></a>
-                <a href="mailto:prospermbuma@gmail.com"><i class="icofont-email"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End Team Section -->
 
     <!-- ======= Mitandao Section ======= -->
     <section id="mitandao" class="mitandao section-bg">
@@ -436,11 +257,10 @@
             <span><img src="assets/img/kilimo.jpg" alt="" class="img-fluid py-3"></span>
             <p>
               e-Kilimo web ni kurasa zinazoweza kutazamwa kwa kutumia Kompyuta au simu janja kupita tovuto yetu ya <a
-                href="https://www.ekilimo.co.tz">eKilimo</a>
+                href="https://www.e-kilimo.co.tz">eKilimo</a>
               utaweza kupata taarifa, mafunzo na kutembelea Wadau, wazalishaji na mawakala wa pembejeo za kilimo nchini.
             </p>
-            <a href="https://www.ekilimo.co.tz" class="btn btn-success" data-toggle="tooltip" data-placement="bottom"
-              title="Nenda kwa tovuti yetu ya ekilimo">e-Kilimo</a>
+            <a href="https://www.e-kilimo.co.tz" class="btn btn-success">e-Kilimo</a>
           </div>
 
           <div class="col-lg-4 box featured" data-aos="zoom-in">
@@ -453,8 +273,7 @@
                 mfumo huu utampa mkulima urahisi zaidi wa kutumia Mifumo mingine ya e-Kilimo na kuweza kutumia jukwaa la
                 mijadala ya kilimo.
             </p>
-            <a href="" class="btn btn-success" data-toggle="tooltip" data-placement="bottom"
-              title="Nenda Play Store">Android</a>
+            <a href="#Android" class="btn btn-success">Android</a>
           </div>
 
           <div class="col-lg-4 box" data-aos="zoom-in">
@@ -465,8 +284,7 @@
               hana uwezo wa kuifikia Kompyuta au Simu janja.
               Unaweza kupata huduma za kilimo kupitia Namba *384*4614#.
             </p>
-            <a href="tel:*384*4614#" class="btn btn-success" data-toggle="tooltip" data-placement="bottom"
-              title="Tumia USSD">USSD</a>
+            <a href="tel:*384*4614#" class="btn btn-success">USSD</a>
           </div>
 
         </div>
@@ -502,7 +320,7 @@
                 <div class="info-box mt-4" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-envelope"></i>
                   <h3>Tutumie ujumbe</h3>
-                  <p>info@ekilimotz.org.tz<br>ekilimotz@gmail.com</p>
+                  <p>info@e-kilimo.co.tz</p>
                 </div>
               </div>
               <div class="col-md-6">
