--- a/assets/site/e-shamba.html
+++ b/assets/site/e-shamba.html
@@ -38,8 +38,8 @@
                     <li><a href="/index.html">Nyumbani</a></li>
                     <li><a href="/index.html#about-partners">Kuhusu Sisi</a></li>
                     <li class="active"><a href="/index.html#services">Huduma zetu</a></li>
-                    <li><a href="wadau.html">Wadau</a></li>
-                    <li><a href="/index.html#team">Timu</a></li>
+                    <li><a href="#wadau.html">Wadau</a></li>
+                    <!-- <li><a href="/index.html#team">Timu</a></li> -->
                     <li><a href="/index.html#contact">Wasiliana nasi</a></li>
                 </ul>
             </nav>
