Some changes o header and footer of the orangal website

--- a/orangal/index.html
+++ b/orangal/index.html
@@ -48,7 +48,7 @@
             <a class="nav-link inactive" href="#">Contact</a>
           </li>
         </ul>
-        <form class="d-flex mt-3">
+        <form class="d-flex mt-1">
           <input class="form-control me-1" type="search" placeholder="Search..." aria-label="Search">
           <button class="btn btn-warning" type="submit">Search</button>
         </form>
@@ -419,8 +419,20 @@
           <span class="text-secondary">
             We love oranges for the better body <br> health of ours and our beloved ones.
           </span>
+          <span class="hr-1 bg-secondary">Tanzanian products</span>
         </div>
         <div class="col-sm-12 col-lg-4 d-grid justify-content-center align-items-center">
+          <p class="footer-nav">
+            <span class="">
+              <a class="" href="#">About Us</a>
+            </span>
+            <span class="">
+              <a class="" href="#">Our Services</a>
+            </span>
+            <span class="">
+              <a class="" href="#">Contact Us</a>
+            </span>
+          </p>
           <p class="menchants mt-4 text-secondary">
             <i class="fab fa-cc-mastercard fa-2x me-1" style="cursor: pointer;"></i>
             <i class="fab fa-cc-paypal fa-2x me-1" style="cursor: pointer;"></i>
@@ -429,23 +441,26 @@
             <i class="fab fa-cc-amazon-pay fa-2x me-1" style="cursor: pointer;"></i>
             <i class="fab fa-cc-discover fa-2x" style="cursor: pointer;"></i>
           </p>
-          <span class="text-secondary">
+        </div>
+        <div class="col-sm-12 col-lg-4 d-grid justify-content-end align-items-center">
+          <div class="social d-flex mt-5">
+            <a href="" target="_blank" class="nav-link text-secondary">
+              <i class="fab fa-facebook fa-2x"></i>
+            </a>
+            <a href="" target="_blank" class="nav-link text-secondary">
+              <i class="fab fa-twitter fa-2x"></i>
+            </a>
+            <a href="" target="_blank" class="nav-link text-secondary">
+              <i class="fab fa-instagram fa-2x"></i>
+            </a>
+            <a href="" target="_blank" class="nav-link text-secondary">
+              <i class="fab fa-linkedin fa-2x"></i>
+            </a>
+          </div>
+          <span class="hr-2 bg-warning"></span>
+          <span class="getYear text-secondary">
             <span id="year"></span> &copy;Oranges, All rights reserved
           </span>
-        </div>
-        <div class="col-sm-12 col-lg-4 d-flex justify-content-end align-items-center">
-          <a href="" target="_blank" class="nav-link text-secondary">
-            <i class="fab fa-facebook fa-2x"></i>
-          </a>
-          <a href="" target="_blank" class="nav-link text-secondary">
-            <i class="fab fa-twitter fa-2x"></i>
-          </a>
-          <a href="" target="_blank" class="nav-link text-secondary">
-            <i class="fab fa-instagram fa-2x"></i>
-          </a>
-          <a href="" target="_blank" class="nav-link text-secondary">
-            <i class="fab fa-linkedin fa-2x"></i>
-          </a>
         </div>
       </div>
       <div class="go-top">
