Modified celebrate web

--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -138,7 +138,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h2>MC PiliPili</h2>
+                            <h3>MC PiliPili</h3>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at quod
                                 odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
@@ -155,7 +155,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h2>MC Kwetu</h2>
+                            <h3>MC Kwetu</h3>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at quod
                                 odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
@@ -172,7 +172,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h2>MC Maeda</h2>
+                            <h3>MC Maeda</h3>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at quod
                                 odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
@@ -187,8 +187,8 @@
         </section>
         <!-- End MCs -->
 
-        <!-- Beds -->
-        <section id="beds" class="bg-light text-black">
+        <!-- Better It -->
+        <section id="better_it" class="bg-light text-black">
             <div class="container">
                 <h2 class="display-4 text-center text-black">Let's Better It</h2>
                 <div class="row flex even-columns py-5">
@@ -209,10 +209,10 @@
                 </div>
             </div>
         </section>
-        <!-- End Beds -->
+        <!-- End Better It -->
 
-        <!-- Chairs -->
-        <section id="chairs" class="text-black bg-white">
+        <!-- For you -->
+        <section id="for_you" class="text-black bg-white">
             <div class="container">
                 <h2 class="display-4 text-center text-primary">Just For You</h2>
 
@@ -235,10 +235,10 @@
                 </div>
             </div>
         </section>
-        <!-- End Chairs -->
+        <!-- End For You -->
 
-        <!-- Closets -->
-        <section id="closets" class="bg-light text-black">
+        <!-- Schedule Yours -->
+        <section id="schedule" class="bg-light text-black">
             <div class="container">
                 <h2 class="display-4 text-center text-black">Schedule Your Ceremony</h2>
                 <div class="row flex even-columns py-5">
@@ -259,7 +259,7 @@
                 </div>
             </div>
         </section>
-        <!-- End Closets -->
+        <!-- End Schedule -->
 
         <!-- Contact -->
         <section id="contact" class="text-black bg-white">
