--- a/celebrate/pages/reviews.html
+++ b/celebrate/pages/reviews.html
@@ -55,7 +55,7 @@
                 <a href="mybookings.html" class="nav-link">My Bookings</a>
             </li>
             <li class="nav-item">
-                <a href="../index.html#contact" class="nav-link">Contact</a>
+                <a href="contact.html" class="nav-link">Contact</a>
             </li>
         </ul>
         <div class="search-cart-user">
@@ -195,7 +195,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row flex even-columns">
+                <div class="row flex even-columns row-2">
                     <div class="col col-reviews">
                         <div class="card flex-space-between">
                             <div class="card-img">
@@ -267,7 +267,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col col-reviews">
+                    <div class="col col-reviews col-2">
                         <div class="card flex-space-between">
                             <div class="card-img">
                                 <div class="inner">
@@ -359,10 +359,10 @@
                         Site Map
                     </h3>
                     <nav class="footer-nav">
-                        <a href="../index.html#about">About</a>
+                        <a href="../index.html">Home</a>
                         <a href="#home">Reviews</a>
                         <a href="mybookings.html">My Bookings</a>
-                        <a href="../index.html#contact">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </nav>
                 </div>
                 <div class="col">
