--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -55,7 +55,7 @@
                 <a href="pages/mybookings.html" class="nav-link">My Bookings</a>
             </li>
             <li class="nav-item">
-                <a href="#contact" class="nav-link">Contact</a>
+                <a href="pages/contact.html" class="nav-link">Contact</a>
             </li>
         </ul>
         <div class="search-cart-user">
@@ -82,7 +82,7 @@
                 <div class="row flex even-columns">
                     <div class="hero-text">
                         <h2>Master of Ceremony</h2>
-                        <a href="#mcs" class="btn btn-primary">Book Now</a>
+                        <a href="pages/book_mc.html" class="btn btn-primary">Book Now</a>
                     </div>
                     <div class="hero-img">
                         <img src="assets/img/hero/hero15.svg" alt="" class="img-fluid">
@@ -337,10 +337,10 @@
                         Site Map
                     </h3>
                     <nav class="footer-nav">
-                        <a href="#about">About</a>
+                        <a href="#home">Home</a>
                         <a href="pages/reviews.html">Reviews</a>
                         <a href="pages/mybookings.html">My Bookings</a>
-                        <a href="#contact">Contact</a>
+                        <a href="pages/contact.html">Contact</a>
                     </nav>
                 </div>
                 <div class="col">
