Have refactored the website

--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <!-- Main CSS -->
     <link rel="stylesheet" href="assets/css/index.css">
+    <!-- Header-Footer CSS -->
+    <link rel="stylesheet" href="assets/css/header-footer.css">
     <!-- Utilities CSS -->
     <link rel="stylesheet" href="assets/css/utilities.css">
     <!-- Title -->
@@ -130,7 +132,7 @@
         <section id="mcs" class="text-black bg-white">
             <div class="container">
                 <h2 class="display-4 text-center text-primary">Masters of Ceremony</h2>
-                <div class="row flex even-columns pt-5 pb-1">
+                <div class="row flex even-columns pt-3 pb-0">
                     <div class="card">
                         <div class="card-img">
                             <div class="inner">
@@ -395,6 +397,7 @@
     <!-- jQuery Offline -->
     <script src="assets/vendors/jquery/jquery.min.js"></script>
     <!-- Main JS -->
+    <script src="assets/js/main.js"></script>
     <script src="assets/js/index.js"></script>
     <!-- End Scripts -->
 </body>
