--- a/celebrate/pages/contact.html
+++ b/celebrate/pages/contact.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <!-- Main CSS -->
     <link rel="stylesheet" href="../assets/css/contact.css">
+    <!-- Header-Footer CSS -->
+    <link rel="stylesheet" href="../assets/css/header-footer.css">
     <!-- Utilities CSS -->
     <link rel="stylesheet" href="../assets/css/utilities.css">
     <!-- Title -->
@@ -77,7 +79,7 @@
     <!-- ====== Main ====== -->
     <main>
 
-      
+
         <!-- Contact -->
         <section id="contact" class="text-black bg-white">
             <div class="container">
@@ -212,6 +214,7 @@
     <!-- jQuery Offline -->
     <script src="../assets/vendors/jquery/jquery.min.js"></script>
     <!-- Main JS -->
+    <script src="../assets/js/main.js"></script>
     <script src="../assets/js/contact.js"></script>
     <!-- End Scripts -->
 </body>
