--- a/celebrate/pages/reviews.html
+++ b/celebrate/pages/reviews.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <!-- Main CSS -->
     <link rel="stylesheet" href="../assets/css/reviews.css">
+    <!-- Header-Footer CSS -->
+    <link rel="stylesheet" href="../assets/css/header-footer.css">
     <!-- Utilities CSS -->
     <link rel="stylesheet" href="../assets/css/utilities.css">
     <!-- Title -->
@@ -417,6 +419,7 @@
     <!-- jQuery Offline -->
     <script src="../assets/vendors/jquery/jquery.min.js"></script>
     <!-- Main JS -->
+    <script src="../assets/js/main.js"></script>
     <script src="../assets/js/reviews.js"></script>
     <!-- End Scripts -->
 </body>
