Some changes made

--- a/celebrate/pages/reviews.html
+++ b/celebrate/pages/reviews.html
@@ -87,7 +87,7 @@
                         <div class="review-user">
                             <p class="lead">Leave a review</p>
                             <div class="user">
-                                <img src="../assets/img/user/user1.JPG" alt="" class="img-fluid">
+                                <img src="../assets/img/user/user1.jpg" alt="" class="img-fluid">
                             </div>
                         </div>
                         <div class="reviews-form">
