--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -288,7 +288,7 @@
                     <div class="col col-address card bg-light">
                         <div class="contact-address p-3">
                             <div class="addr-wrap">
-                                <i class="fas fa-map-marked"></i>
+                                <i class="fas fa-map-marker-alt"></i>
                                 <div class="addr">
                                     <h3>Address</h3>
                                     <p>
@@ -301,18 +301,26 @@
                                 <div class="addr">
                                     <h3>Email</h3>
                                     <p>
-                                        prospermbuma@gmail.com
-                                        mbumaprosper@hotmail.com
+                                        info@celebrate.co.tz
                                     </p>
                                 </div>
                             </div>
                             <div class="addr-wrap">
-                                <i class="fas fa-phone"></i>
+                                <i class="fas fa-phone-alt"></i>
+                                <div class="addr">
+                                    <h3>Website</h3>
+                                    <p>
+                                        https://www.celebrate.co.tz
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="addr-wrap">
+                                <i class="fas fa-phone-alt"></i>
                                 <div class="addr">
                                     <h3>Call</h3>
                                     <p>
                                         +255 686 389 908
-                                        +255 716 491 716
+                                        <!-- +255 716 491 716 -->
                                     </p>
                                 </div>
                             </div>
@@ -352,7 +360,7 @@
                     <div class="newsletters">
                         <div class="newsletters-form">
                             <form action="">
-                                <input type="text" name="newsletter" id="newsletter" placeholder="Email">
+                                <input type="text" name="newsletter" id="newsletter" placeholder="Email" required>
                                 <input type="submit" value="Subscribe Now" name="submit">
                             </form>
                         </div>
