--- a/celebrate/pages/contact.html
+++ b/celebrate/pages/contact.html
@@ -105,7 +105,7 @@
                     <div class="col col-address card bg-light">
                         <div class="contact-address p-3">
                             <div class="addr-wrap">
-                                <i class="fas fa-map-marked"></i>
+                                <i class="fas fa-map-marker-alt"></i>
                                 <div class="addr">
                                     <h3>Address</h3>
                                     <p>
@@ -124,7 +124,7 @@
                                 </div>
                             </div>
                             <div class="addr-wrap">
-                                <i class="fas fa-phone"></i>
+                                <i class="fas fa-phone-alt"></i>
                                 <div class="addr">
                                     <h3>Call</h3>
                                     <p>
@@ -169,7 +169,7 @@
                     <div class="newsletters">
                         <div class="newsletters-form">
                             <form action="">
-                                <input type="text" name="newsletter" id="newsletter" placeholder="Email">
+                                <input type="text" name="newsletter" id="newsletter" placeholder="Email" required>
                                 <input type="submit" value="Subscribe Now" name="submit">
                             </form>
                         </div>
