--- a/celebrate/pages/mybookings.html
+++ b/celebrate/pages/mybookings.html
@@ -133,7 +133,7 @@
                     <div class="newsletters">
                         <div class="newsletters-form">
                             <form action="">
-                                <input type="text" name="newsletter" id="newsletter" placeholder="Email">
+                                <input type="text" name="newsletter" id="newsletter" placeholder="Email" required>
                                 <input type="submit" value="Subscribe Now" name="submit">
                             </form>
                         </div>
